# pizza

./: CMakeLists.txt  README.md
python/pizza/: __init__.py  averages.py  balance.py  ek_transfer.py  frame.py  frame3D.py  hankel.py  libmelt.py  libpizza.py  log.py  model.json  movie.py  old_averages.py  plotlib.py  radial.py  series.py  spectrum.py
samples/: pizza_wizard.py
samples/DIRKSchemes/: input.nml  input_final.nml  input_first_restart.nml  input_fourth_restart.nml  input_second_restart.nml  input_third_restart.nml  reference.out  unitTest.py
samples/FingConv/: input.nml  input_restart.nml  reference.out  unitTest.py
samples/GalerkinBases/: input.nml  input_final.nml  input_first_continue.nml  input_second_continue.nml  reference.out  unitTest.py
samples/InhomogeneousHeatFlux/: input.nml  reference.out  unitTest.py
samples/MultistepSchemes/: input.nml  input_first_restart.nml  input_fourth_restart.nml  input_second_restart.nml  input_third_restart.nml  reference.out  unitTest.py
samples/NonRotRa2e3/: input.nml  input_1.nml  reference.out  unitTest.py
samples/PhaseField/: checkpoint_end.ini  input.nml  input_continue.nml  input_final.nml  reference.out  unitTest.py
samples/RotE1e3EkPump/: input.nml  input_FD.nml  input_cheb.nml  input_final.nml  reference.out  unitTest.py
samples/RotInteg/: input.nml  input_continue.nml  input_final.nml  input_start.nml  reference.out  unitTest.py
samples/TestChebMap/: input.nml  inputStart.nml  reference.out  unitTest.py
samples/TestRestart/: input.nml  reference.out  unitTest.py
samples/TimeSchemes/: input.nml  input_final.nml  input_first_restart.nml  input_second_restart.nml  reference.out  unitTest.py
samples/TimeStepChange/: input.nml  reference.out  unitTest.py
samples/temp3D/: input.nml  reference.out  unitTest.py
src/: .namelists.f90.swp  .update_temperature.f90.swp  CMakeLists.txt  algebra_lapack.f90  algebra_mkl.f90  balances.f90  band_matrix.f90  blocking.f90  blocking_lm.f90  bordered_matrix.f90  char_manip.f90  chebsparselib.f90  chebyshev.f90  chebyshev_polynoms.f90  checkpoints.f90  communications.f90  constants.f90  courant.f90  dct_fftw.f90  dirk_schemes.f90  dt_fieldsLast.f90  energy_transfer.f90  fft_fftw.f90  fields.f90  finite_differences.f90  galerkin_basis.f90  get_nl.f90  get_td.f90  get_z_avg.f90  hdif.f90  horizontal.f90  init_fields.f90  integration.f90  lm_loop.f90  lm_mapping.f90  matrix_types.f90  mean_sd.f90  mem_alloc.f90  mloop.f90  mloop_fd.f90  (+55 more)
